--- a/static/main.css
+++ b/static/main.css
@@ -42,6 +42,8 @@ img {
     font-size: 13px;         /* smaller text */
     line-height: 1.25;
     z-index: 1000;
+    max-width: 40%;
+    opacity: 0.85;
     word-break: break-all;
 }
 
