--- a/templates/folder.html
+++ b/templates/folder.html
@@ -20,6 +20,7 @@
   .notice { color: rgb(0, 35, 151); }
   </style>
   <link rel="stylesheet" href="/static/quicklaunch.css">
+  <script src="/static/run_task.js"></script>
   <script>
     async function setClipboard(text) {
       const type = "text/plain";
