--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[{{ NOTEBOOK_NAME }}] {{ title }}</title>
+    <script src="/static/run_task.js"></script>
     <script src="/static/main.js"></script>
     <script>
 
