--- a/templates/media.html
+++ b/templates/media.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[{{ NOTEBOOK_NAME }}] Media uploads</title>
+    <script src="/static/run_task.js"></script>
     <script src="/static/media.js"></script>
     <link rel="stylesheet" href="/static/main.css">
     <style>
