--- a/templates/main_nojournal.html
+++ b/templates/main_nojournal.html
@@ -8,6 +8,9 @@
     <script src="/static/main.js"></script>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/quicklaunch.css">
+    {% if CUSTOM_HEADER_CONTENT %}
+    {{ CUSTOM_HEADER_CONTENT | safe }}
+    {% endif %}
 </head>
 <body>
 
