--- a/templates/media.html
+++ b/templates/media.html
@@ -24,6 +24,9 @@
             initMediaPage();
         });
     </script>
+    {% if CUSTOM_HEADER_CONTENT %}
+    {{ CUSTOM_HEADER_CONTENT | safe }}
+    {% endif %}
 </head>
 <body>
     <h1>Media manager</h1>
