experimental support for backlink monitoring

--- a/notesserver/static/main.css
+++ b/notesserver/static/main.css
@@ -11,6 +11,10 @@ body {
     margin-top: 1em;
 }
 
+#backlinks {
+    margin-top: 1em;
+}
+
 .entry {
     background-color: white;
     padding: 20px;
