--- a/notesserver/templates/main.html
+++ b/notesserver/templates/main.html
@@ -99,6 +99,14 @@
         {% endfor %}
         <div class="toc-level-2"><a href="#journal_entries">journal entries</a></div>
         </div>
+        {% if backlinks | length > 0 %}
+        <div id="backlinks">
+        <strong>backlinks</strong>
+        {% for backlink in backlinks %}
+            <div class=""backlink"><a href="{{ backlink }}">{{ backlink }}</a></div>
+        {% endfor %}
+        </div>
+        {% endif %}
     </div>
     </div>
 
