--- a/notesserver/templates/main_nojournal.html
+++ b/notesserver/templates/main_nojournal.html
@@ -30,6 +30,14 @@
             <div class="toc-level-{{ level }}"><a href="#heading-{{ loop.index0 }}">{{ text }}</a></div>
         {% endfor %}
         </div>
+        {% if backlinks | length > 0 %}
+        <div id="backlinks">
+        <strong>backlinks</strong>
+        {% for backlink in backlinks %}
+            <div class=""backlink"><a href="{{ backlink }}">{{ backlink }}</a></div>
+        {% endfor %}
+        </div>
+        {% endif %}
     </div>
     </div>
 
