--- a/notesserver/templates/main.html
+++ b/notesserver/templates/main.html
@@ -99,7 +99,7 @@
         {% endfor %}
         <div class="toc-level-2"><a href="#journal_entries">journal entries</a></div>
         </div>
-        {% if backlinks | length > 0 %}
+        {% if backlinks is not none and backlinks | length > 0 %}
         <div id="backlinks">
         <strong>backlinks</strong>
         {% for backlink in backlinks %}
