--- a/notesserver/templates/main.html
+++ b/notesserver/templates/main.html
@@ -103,7 +103,7 @@
         <div id="backlinks">
         <strong>backlinks</strong>
         {% for backlink in backlinks %}
-            <div class=""backlink"><a href="{{ backlink }}">{{ backlink }}</a></div>
+            <div class="backlink"><a href="{{ backlink }}">{{ backlink }}</a></div>
         {% endfor %}
         </div>
         {% endif %}
