--- a/notesserver/templates/main.html
+++ b/notesserver/templates/main.html
@@ -4,9 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[{{ NOTEBOOK_NAME }}] {{ title }}</title>
-    <script src="/static/run_task.js"></script>
-    <script src="/static/main.js"></script>
     <script>
+        const mypath = "{{ mypath }}";
 
         function formatDate(thedate) {
             const dateParts = {
@@ -37,6 +36,8 @@
         }
 
     </script>
+    <script src="/static/run_task.js"></script>
+    <script src="/static/main.js"></script>
     <link rel="stylesheet" href="/static/main.css">
     <link rel="stylesheet" href="/static/quicklaunch.css">
     {% if CUSTOM_HEADER_CONTENT %}
