--- a/notesserver/templates/main_nojournal.html
+++ b/notesserver/templates/main_nojournal.html
@@ -4,6 +4,11 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[{{ NOTEBOOK_NAME }}] {{ title }}</title>
+
+    <script>
+        const mypath = "{{ mypath }}";
+    </script>
+
     <script src="/static/run_task.js"></script>
     <script src="/static/main.js"></script>
     <link rel="stylesheet" href="/static/main.css">
