--- a/notesserver/static/main.css
+++ b/notesserver/static/main.css
@@ -23,7 +23,8 @@ body {
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     list-style-type: none;
     position: relative;
-    word-break: break-all;
+    overflow-wrap: break-word;
+    text-align: justify;
 }
 
 .archived {
